// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageViewDefinitionRuleRender render AppType.MINP 1`] = `
<div>
  <span>
    现在定义的是页面 
    <span
      class="link"
    >
      pages/index/index
    </span>
     ，查询条件为 
    <span
      class="link"
    >
      a=12
    </span>
    。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render AppType.MINP and path==undefined 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
    >
      小程序所有页面
    </span>
     ，查询条件为 
    <span
      class="link"
    >
      a=12
    </span>
    。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render AppType.MINP and query==undefined 1`] = `
<div>
  <span>
    现在定义的是页面 
    <span
      class="link"
    >
      pages/index/index
    </span>
     。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render AppType.NATIVE 1`] = `
<div>
  <span>
    现在定义的是页面 
    <span
      class="link"
    >
      pages/index/index
    </span>
     。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render AppType.WEB 1`] = `
<div>
  <span>
    现在定义的是页面 
    <span
      class="link"
    >
      wx265d0fa6fa70fae9pages/index/index
    </span>
     ，查询条件为 
    <span
      class="link"
    >
      a=12
    </span>
     。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render AppType.WEB and path==undefined 1`] = `
<div>
  <span>
    现在定义的是 
    <span
      class="link"
    >
      wx265d0fa6fa70fae9
    </span>
     查询条件为 
    <span
      class="link"
    >
      a=12
    </span>
     下的所有页面。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render AppType.WEB and query==undefined 1`] = `
<div>
  <span>
    现在定义的是页面 
    <span
      class="link"
    >
      wx265d0fa6fa70fae9pages/index/index
    </span>
      。
  </span>
</div>
`;

exports[`PageViewDefinitionRuleRender render with repeatTag 1`] = `
<div>
  <span>
    该规则已被 
    <b>
      zhangxueqi
    </b>
     定义为【定义一个新的事件2】。现在定义的是页面 
    <span
      class="link"
    >
      pages/index/index
    </span>
     。
  </span>
</div>
`;
